RESOLVED FIXED305587
Crash in `PendingDownload::willSendRedirectedRequest`
https://bugs.webkit.org/show_bug.cgi?id=305587
Summary Crash in `PendingDownload::willSendRedirectedRequest`
Charlie Wolfe
Reported 2026-01-15 11:58:18 PST
...
Attachments
Charlie Wolfe
Comment 1 2026-01-15 11:58:19 PST
Charlie Wolfe
Comment 2 2026-01-15 11:59:03 PST
EWS
Comment 3 2026-01-15 12:42:22 PST
Committed 305662@main (e9033255d3ee): <https://commits.webkit.org/305662@main> Reviewed commits have been landed. Closing PR #56655 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.