Crash in `PendingDownload::willSendRedirectedRequest` https://bugs.webkit.org/show_bug.cgi?id=305587 rdar://165732194

Reviewed by Pascoe.

* Source/WebKit/NetworkProcess/Downloads/PendingDownload.cpp:
(WebKit::PendingDownload::willSendRedirectedRequest):

Canonical link: https://commits.webkit.org/305662@main